# TakumCpp

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  Doxyfile  README.md  build.bat  build.ps1  debug_128  debug_128.cpp  debug_add  debug_add.cpp  debug_basic  debug_basic.cpp  debug_from_ell  debug_from_ell.cpp  debug_from_ell2  debug_from_ell2.cpp  debug_full_test  debug_full_test.cpp  debug_phi  debug_phi.cpp  debug_phi2  debug_phi2.cpp  debug_phi3  debug_phi3.cpp  debug_simple  debug_simple.cpp  debug_sub  debug_sub.cpp  debug_sub2  debug_sub2.cpp  test_new_architecture  test_new_architecture.cpp
.github/: copilot-instructions-old.md  copilot-instructions.md
.github/workflows/: ci.yml
Docs/: APIReference.md  CodingStandards.md  MathematicalFoundation.md  Plan.md  Spec.md  arithmetic.md  bitlayout.md  core.md
cmake/: TakumCppConfig.cmake.in  test_cxx23.cpp  test_cxx26.cpp
debug/: CMakeLists.txt  README.md
docs/: math.md
docs/doxygen/html/: annotated.html  annotated_dup.js  arithmetic_8h.html  arithmetic_8h.js  arithmetic_8h_source.html  classes.html  classtakum_1_1detail_1_1expected-members.html  classtakum_1_1detail_1_1expected.html  classtakum_1_1detail_1_1expected.js  compatibility_8h.html  compatibility_8h.js  compatibility_8h_source.html  concepts.html  concepts.js  concepttakum_1_1takum__floating__point.html  core_8h.html  core_8h.js  core_8h_source.html  deprecated.html  dir_039709ba8250b8908b294ee9c867c91d.html  dir_039709ba8250b8908b294ee9c867c91d.js  dir_26a52b9ebc3ed83bbd6e30a263f9ce51.html  dir_26a52b9ebc3ed83bbd6e30a263f9ce51.js  dir_26d896e960f72f77f4e8cabbd6c1d293.html  dir_26d896e960f72f77f4e8cabbd6c1d293.js  dir_df4c36390708acc43a62640e9083ecab.html  dir_df4c36390708acc43a62640e9083ecab.js  expected__shim_8h.html  expected__shim_8h.js  expected__shim_8h_source.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_type.html  index.html  (+41 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  concepts_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  (+16 more)
docs/doxygen/latex/: annotated.tex  arithmetic_8h.tex  arithmetic_8h_source.tex  classtakum_1_1detail_1_1expected.tex  compatibility_8h.tex  compatibility_8h_source.tex  concepts.tex  concepttakum_1_1takum__floating__point.tex  core_8h.tex  core_8h_source.tex  deprecated.tex  dir_039709ba8250b8908b294ee9c867c91d.tex  dir_26a52b9ebc3ed83bbd6e30a263f9ce51.tex  dir_26d896e960f72f77f4e8cabbd6c1d293.tex  dir_df4c36390708acc43a62640e9083ecab.tex  expected__shim_8h.tex  expected__shim_8h_source.tex  files.tex  namespaces.tex  namespacestd.tex  namespacetakum.tex  namespacetakum_1_1detail.tex  namespacetakum_1_1internal.tex  namespacetakum_1_1internal_1_1phi.tex  namespacetakum_1_1internal_1_1ref.tex  namespacetakum_1_1types.tex  phi__coeffs_8h.tex  phi__coeffs_8h_source.tex  phi__spec_8h.tex  phi__spec_8h_source.tex  refman.tex  structtakum_1_1expected__shim.tex  structtakum_1_1takum.tex  structtakum_1_1takum__error.tex  tau__ref_8h.tex  tau__ref_8h_source.tex  types_8h.tex  types_8h_source.tex
examples/: arithmetic.cpp  basic_usage.cpp  financial_precision.cpp  math.cpp  performance_benchmark.cpp  scientific_computing.cpp
include/takum/: arithmetic.h  compatibility.h  compiler_detection.h  config.h  core.h  expected_shim.h  math.h  math_constants.h  precision_traits.h  takum.h  types.h
include/takum/arithmetic/: arithmetic_engine.h
include/takum/config/: runtime_config.h
include/takum/core/: encoding.h
include/takum/internal/: phi_bench.h  phi_eval.h  phi_lut.h  phi_spec.h  phi_types.h
include/takum/internal/ref/: tau_ref.h
scripts/: ctest_log.cmake  gen_poly_coeffs.py
test/: CMakeLists.txt  arithmetic.deterministic.test.cpp  arithmetic.edge.test.cpp  arithmetic.exhaustive.test.cpp  arithmetic.mixed.test.cpp  arithmetic.props.test.cpp  arithmetic.random.test.cpp  arithmetic.test.cpp  ci_failure_capture.h  compatibility.test.cpp  compiler_detection.test.cpp  core.test.cpp  math.comprehensive.test.cpp  math.test.cpp  math.test.cpp.backup  multiword.test.cpp  nar_propagation.test.cpp  phi.addition.phase4.test.cpp  phi.test.cpp  placeholder.test.cpp  refactored_architecture.test.cpp  safe_variants.additional.test.cpp  spec_reference.test.cpp  test_helpers.h  test_nar_check.cpp
test/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  TestNarCheck.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  test_nar_check.vcxproj  test_nar_check.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters  tests[1]_include.cmake
test/build_test/test_nar_check.dir/Release/test_nar_check.tlog/: test_nar_check.lastbuildstate
test/build_test/tests.dir/Release/tests.tlog/: CL.command.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test/build_test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
test/build_test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
